# fund_prog_labs

./: CMakeLists.txt  README.md  README.txt  abc.c  abc.h  lab1.c  lab1.h  lab2.c  lab2.h  main.c  myLib.h  profiler.c  profiler.h  test.c  test.h
lab11_12/: lab11.c  lab11.h  lab12.c  lab12.h
lab12/: lab1.c
lab1_2/: lab1.h  lab2.c
lab34/: lab3.c
lab3_4/: lab3.h  lab4.c  lab4.h
lab56/: lab5.h  lab6.h
lab5_6/: lab5.c  lab6.c
lab78/: lab7.c  lab7.h
lab7_8/: lab7.c  lab8.c  lab8.h
lab9_10/: lab10.c  lab10.h  lab9.c  lab9.h
