cmake_minimum_required(VERSION 3.23)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c lab12/lab1.c lab12/lab1.h lab12/lab2.c lab12/lab2.h lab34/lab3.c lab34/lab3.h lab34/lab4.c lab34/lab4.h lab56/lab5.c lab56/lab5.h lab56/lab6.c lab56/lab6.h lab78/lab7.c lab78/lab7.h lab78/lab8.c lab78/lab8.h)
