cmake_minimum_required(VERSION 3.23)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c lab1_2/lab1.c lab1_2/lab1.h lab1_2/lab2.c lab1_2/lab2.h lab3_4/lab3.c lab3_4/lab3.h lab3_4/lab4.c lab3_4/lab4.h lab5_6/lab5.c lab5_6/lab5.h lab5_6/lab6.c lab5_6/lab6.h lab7_8/lab7.c lab7_8/lab7.h lab7_8/lab8.c lab7_8/lab8.h lab9_10/lab9.c lab9_10/lab9.h lab9_10/lab9.h lab9_10/lab10.c lab9_10/lab10.h lab11_12/lab11.c lab11_12/lab11.h lab11_12/lab12.c lab11_12/lab12.h)
